@@ -69,7 +69,7 @@
 						1526968
 		</td>
 		<td>
-			<a href="/tracker/index.php?func=detail&amp;aid=1526968&amp;group_id=599&amp;atid=100599">
+			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1526968&amp;group_id=599&amp;atid=100599">
 				Bit inversion in pic16F74
 			</a>
 		</td>
@@ -90,7 +90,7 @@
 						1525093
 		</td>
 		<td>
-			<a href="/tracker/index.php?func=detail&amp;aid=1525093&amp;group_id=599&amp;atid=100599">
+			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1525093&amp;group_id=599&amp;atid=100599">
 				printf_fast_f, problem with large float
 			</a>
 		</td>
@@ -111,7 +111,7 @@
 						1524291
 		</td>
 		<td>
-			<a href="/tracker/index.php?func=detail&amp;aid=1524291&amp;group_id=599&amp;atid=100599">
+			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1524291&amp;group_id=599&amp;atid=100599">
 				__gptrget not overload register B
 			</a>
 		</td>
@@ -181,27 +181,6 @@
 		<td>
 							&nbsp;
 						2006-07-07 23:09
-		</td>
-		<td align="center">
-			5
-		</td>
-
-
-		<td>nobody</td>
-		<td>borutr</td>
-	</tr>
-	<tr bgcolor="#dababa">
-		<td nowrap>
-						1519095
-		</td>
-		<td>
-			<a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1519095&amp;group_id=599&amp;atid=100599">
-				regression test onebyte.c fails on ppc64 host
-			</a>
-		</td>
-		<td>
-							&nbsp;
-						2006-07-07 22:59
 		</td>
 		<td align="center">
 			5
